# CMakeGTest

./: .gitignore  CMakeLists.txt
Include/: action.hpp  actions_chain.hpp  actions_chain_wrapper.hpp  event.hpp  event_payload_bad_cast.hpp  event_type_traits.hpp  fsm.hpp  handler_base.hpp  handler_type.hpp  multi_handler.hpp  on_entry_handler.hpp  on_event_action.hpp  on_event_hadler.hpp  on_event_handler.hpp  on_leave_handler.hpp  on_unexpected_event_action.hpp  state.hpp
Source/: main.cpp  sum.cpp
Test/: CMakeLists.txt  CMakeLists.txt.in  MainTest.cpp  event_handler_test.cpp  event_test.cpp  multi_handler_test.cpp  on_event_handler_test.cpp  state_test.cpp
Test/Include/: DummyEvent.hpp  UnexpectedEvent.hpp
include/: action_tag.hpp  actions_chain.hpp  actions_chain_wrapper.hpp  event_payload_bad_cast.hpp  event_type_traits.hpp  on_event_action.hpp  on_unexpected_event_action.hpp
scripts/: gcc_install.sh  vcpkg_install.sh
source/: main.cpp
test/: CMakeLists.txt  state_test.cpp
test/include/: DummyEvent.hpp  UnexpectedEvent.hpp
