cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECT_LIB FSM_LIB)
set(PROJECT_UT FSM_UT)

set(SOURCE_FILES_EXT cpp)
set(HEADER_FILES_EXT hpp)
set(SOURCE_FILES_DIR_NAME Source)
set(HEADER_FILES_DIR_NAME Include)
set(TEST_FILES_DIR_NAME Test)

set(HEADER_FILES_DIR ${CMAKE_SOURCE_DIR}/${HEADER_FILES_DIR_NAME})
set(SOURCE_FILES_DIR ${CMAKE_SOURCE_DIR}/${SOURCE_FILES_DIR_NAME})
set(SOURCE_TEST_DIR ${CMAKE_SOURCE_DIR}/${TEST_FILES_DIR_NAME})

file(GLOB SOURCE_FILES ${SOURCE_FILES_DIR}/*.${SOURCE_FILES_EXT})
file(GLOB HEADER_FILES ${HEADER_FILES_DIR}/*.${HEADER_FILES_EXT})
file(GLOB SOURCE_TEST_FILES ${SOURCE_TEST_DIR}/*.${SOURCE_FILES_EXT})

enable_testing()

include_directories(${HEADER_FILES_DIR})
add_library(${PROJECT_LIB} ${SOURCE_FILES} ${HEADER_FILES})

add_subdirectory(${TEST_FILES_DIR_NAME})
