if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
      CACHE STRING "")
endif()

message(STATUS "Vcpkg integration script found : " ${CMAKE_TOOLCHAIN_FILE})

cmake_minimum_required (VERSION 3.8)

project(FSM LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_FILES_EXT cpp)
set(HEADER_FILES_EXT hpp)
set(SOURCE_FILES_DIR_NAME Source)
set(HEADER_FILES_DIR_NAME Include)
set(TEST_FILES_DIR_NAME Test)

set(HEADER_FILES_DIR ${CMAKE_SOURCE_DIR}/${HEADER_FILES_DIR_NAME})
set(SOURCE_FILES_DIR ${CMAKE_SOURCE_DIR}/${SOURCE_FILES_DIR_NAME})
set(SOURCE_TEST_DIR ${CMAKE_SOURCE_DIR}/${TEST_FILES_DIR_NAME})

file(GLOB SOURCE_FILES ${SOURCE_FILES_DIR}/*.${SOURCE_FILES_EXT})
file(GLOB HEADER_FILES ${HEADER_FILES_DIR}/*.${HEADER_FILES_EXT})
file(GLOB SOURCE_TEST_FILES ${SOURCE_TEST_DIR}/*.${SOURCE_FILES_EXT})

include_directories(${HEADER_FILES_DIR})
add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})

add_subdirectory(${TEST_FILES_DIR_NAME})
